[package]
name = "qd-archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
dashmap = "5.4.0"
futures = "0.3.25"
reqwest = { version = "0.11.13", features = ["json", "cookies", "gzip", "brotli", "deflate"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls"] }
stream-reconnect = "0.3.4"
tokio = { version = "1.23.1", features = ["full", "time"] }
tokio-stream = { version = "0.1.11", features = ["time"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
